--- a/TreeHole/pages/welcome/welcome.wxss
+++ b/TreeHole/pages/welcome/welcome.wxss
@@ -1,20 +1,26 @@
-.container{
+/**index.wxss**/
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
+.userinfo-nickname {
+  color: #aaa;
+}
+
+.usermotto {
+  margin-top: 200px;
     display: flex;
-    flex-direction:column;
-    align-items: center;
-    background-color:#b3d4db;
-}
-
-.avatar{
-    width:200rpx;
-    height:200rpx;
-    margin-top:160rpx;
-}
-
-.motto{
-    margin-top:100rpx;
-    font-size:32rpx;
-    font-weight: bold;
+  flex-direction: column;
+  align-items: center;
 }
 
 .journey-container{
@@ -24,6 +30,7 @@
     height: 80rpx;
     border-radius: 5px;
     text-align:center;
+    align-items: center;
 }
 
 .journey{
@@ -31,7 +38,9 @@
     font-weight: bold;
     line-height:80rpx;
     color: #405f80;
+     align-items: center;
 }
+
 
 page{
     height: 100%;
