--- a/TreeHole/pages/List/list-item/list-item-template.wxml
+++ b/TreeHole/pages/List/list-item/list-item-template.wxml
@@ -2,7 +2,7 @@
 <template name="listItem">
   <view class="list-contaioner">
     <view class="list-author-data">
-       <image class="list-image" src="{{avatar}}"></image>
+       <image class="list-image" src="/images/list/1.png"></image>
       <text class="list-name">{{name}}</text>
       <text class="list-date">{{date}}</text>
     </view>
