--- a/TreeHole/pages/List/list-item/list-item-template.wxml
+++ b/TreeHole/pages/List/list-item/list-item-template.wxml
@@ -2,9 +2,9 @@
 <template name="listItem">
   <view class="list-contaioner">
     <view class="list-author-data">
-       <image class="list-image" src="/images/list/1.png"></image>
+       <image class="list-image" src="/images/list/{{imageid}}.png"></image>
       <text class="list-name">{{name}}</text>
-      <text class="list-date">{{date}}</text>
+      <text class="list-date">{{datetime}}</text>
     </view>
     <text class="list-content">{{content}}</text>
   </view>
