--- a/TreeHole/pages/Person/setting/setting.wxml
+++ b/TreeHole/pages/Person/setting/setting.wxml
@@ -1,7 +1,15 @@
 <form bindsubmit="doSubmit">
   <view class="changeName">
-    <textarea name="content" maxlength="20" style="height: 2em" placeholder="填新昵称~" />
-    <button type="primary" size="{{primarySize}}" formType="submit" disabled="{{disabledSubmitBtn}}">确认修改</button>
+    <textarea name="content" maxlength="20" style="height: 2em" bindblur='bindTextAreaBlur'  placeholder="填新昵称~" />
+    <button type="primary" size="{{primarySize}}" formType="submit" focus="{{focus}}" bindtap="fabiao">确认修改</button>
   </view>
-
 </form>
+<view class="select">
+<text class="avater">选择扮演的角色</text>
+<button type="default" catchtap="onPostTap1" size="{{defaultSize}}" >阿狸</button>
+<button type="default" catchtap="onPostTap2" size="{{defaultSize}}" >提莫</button>
+<button type="default" catchtap="onPostTap3" size="{{defaultSize}}" >亚索</button>
+<button type="default" catchtap="onPostTap4" size="{{defaultSize}}" >伊泽瑞尔</button>
+<button type="default"  catchtap="onPostTap5" size="{{defaultSize}}" >艾瑞利亚</button>
+<button type="default" catchtap="onPostTap6" size="{{defaultSize}}" >皎月</button>
+</view>
