--- a/TreeHole/pages/List/list-item/list-item-template.wxss
+++ b/TreeHole/pages/List/list-item/list-item-template.wxss
@@ -4,7 +4,7 @@
   margin-top: 0rpx;
   margin-bottom: 0rpx;
   margin-left: 0rpx;
-  background-color:honeydew;
+  background-color: burlywood;
   border-bottom: 1px solid  lightgray;
   border-top: 1px solid  lightgray;
   padding-bottom: 1px;
