--- a/TreeHole/pages/Person/Person.wxss
+++ b/TreeHole/pages/Person/Person.wxss
@@ -1,11 +1,11 @@
 /* pages/Person/Person.wxss */
 page{
-  background-color:  aliceblue;
+  background-color:   burlywood;
 }
 .container {
   display: flex;
   flex-direction: column;
-  background-color: aliceblue;
+  background-color:  burlywood;
 }
 
 .user-image-name {
