--- a/TreeHole/pages/List/list-details/list-details.wxss
+++ b/TreeHole/pages/List/list-details/list-details.wxss
@@ -1,7 +1,10 @@
+@import "../list-item/list-item-template.wxss";
 page{
   background: cornsilk
 }
-
+.list-contaioner {
+  background-color: cornsilk;
+}
 
 .container {
   display: flex;
