--- a/TreeHole/pages/Person/message/message-item/message-item-template.wxss
+++ b/TreeHole/pages/Person/message/message-item/message-item-template.wxss
@@ -4,7 +4,7 @@
   margin-top: 0rpx;
   margin-bottom: 0rpx;
   margin-left: 0rpx;
-  background-color:honeydew;
+  background-color:antiquewhite;
   border-bottom: 1px solid  lightgray;
   border-top: 1px solid  lightgray;
   padding-bottom: 1px;
@@ -14,7 +14,7 @@
   margin-top: 10rpx;
   margin-bottom: 20rpx;
   margin-left: 10px;
-  background-color: honeydew;
+  background-color: antiquewhite;
   float: right;
   margin-right: 25rpx;
 }
